tests/inputs/invalid/map-08.js
const map = [['x','-','B','-','@','-','A','-','x']];

module.exports = map;